<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/job"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_shortQuestion"
            android:icon="@drawable/question"
            android:title="@string/menu_shortQuestion" />
        <item
            android:id="@+id/nav_mcqTest"
            android:icon="@drawable/test_quiz"
            android:title="@string/menu_mcqTest" />
        <item
            android:id="@+id/nav_yourScore"
            android:icon="@drawable/stars_black_24dp"
            android:title="@string/menu_yourScore" />

        <item
            android:id="@+id/nev_adminPanel_id"
            android:icon="@drawable/lock_black_24dp"
            android:title="Admin Panel" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_terms"
                android:icon="@drawable/terms_black_24dp"
                android:title="@string/menu_terms" />

         <item
                android:id="@+id/nav_about_me"
                android:icon="@drawable/person_black_24dp"
                android:title="@string/menu_about_me" />

         <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_rate_us"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
