<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#ddd"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Question.ShortQuestionFragment"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/splash_screen"
        android:paddingBottom="8dp"
        >


        <Button
            android:id="@+id/questionBangla_id"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:textColor="#000"
            android:textSize="20sp"
            android:background="@drawable/button_shadow"
            android:text="@string/bangla"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <Button
            android:id="@+id/questionEnglish_id"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:textColor="#000"
            android:textSize="20sp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/button_shadow"
            android:text="@string/english"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/questionBangla_id" />

        <Button
            android:id="@+id/questionMath_id"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:textColor="#000"
            android:textSize="20sp"
            android:background="@drawable/button_shadow"
            android:text="@string/math"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/questionEnglish_id" />

        <Button
            android:id="@+id/questionComputer_id"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:textColor="#000"
            android:textSize="20sp"
            android:background="@drawable/button_shadow"
            android:text="@string/computer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/questionMath_id" />


        <Button
            android:id="@+id/questionRules_id"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:textColor="#000"
            android:textSize="20sp"
            android:background="@drawable/button_shadow"
            android:text="@string/rules"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/questionComputer_id" />
        <Button
            android:id="@+id/questionMantelSkill_id"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:textColor="#000"
            android:textSize="20sp"
            android:background="@drawable/button_shadow"
            android:text="@string/mantelSkill"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/questionRules_id" />
        <Button
            android:id="@+id/questionBDKnowledge_id"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:textColor="#000"
            android:textSize="20sp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/button_shadow"
            android:text="@string/bDKnowledge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/questionMantelSkill_id" />
        <Button
            android:id="@+id/questionI_Knowledge_id"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:textColor="#000"
            android:textSize="20sp"
            android:background="@drawable/button_shadow"
            android:text="@string/internationalKnowledge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/questionBDKnowledge_id" />
        <Button
            android:id="@+id/questionGeographical_id"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:textColor="#000"
            android:textSize="20sp"
            android:background="@drawable/button_shadow"
            android:text="@string/geographical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/questionI_Knowledge_id" />
        <Button
            android:id="@+id/questionGeneralScience_id"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:textColor="#000"
            android:textSize="20sp"
            android:background="@drawable/button_shadow"
            android:text="@string/generalScience"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/questionGeographical_id" />

        <Button
            android:id="@+id/questionRecentNews_id"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:textColor="#000"
            android:textSize="20sp"
            android:background="@drawable/button_shadow"
            android:text="@string/recentNews"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/questionGeneralScience_id" />




    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>